--- a/client/package.json
+++ b/client/package.json
@@ -19,7 +19,7 @@
     "@angular/platform-browser": "~11.2.7",
     "@angular/platform-browser-dynamic": "~11.2.7",
     "@angular/router": "~11.2.7",
-    "angular-responsive-carousel": "^2.0.2",
+    "angular-responsive-carousel": "~2.1.2",
     "ng-zorro-antd": "^11.4.0",
     "rxjs": "~6.6.0",
     "swiper": "^6.5.6",
